# bazel-example-multiarch-transition

./: BUILD.bazel  MODULE.bazel  README.md  multi_arch.bzl
.github/: cspell.yaml  renovate.json
.github/workflows/: ci.yaml
toolchains/: BUILD.bazel  arm64_gcc_linux_x86_64.BUILD  extensions.bzl
tools/: dockerbuild
