load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("multi_arch.bzl", "multi_arch")

cc_binary(
    name = "a",
    srcs = ["hello.cc"],
)
cc_binary(
    name = "b",
    srcs = ["hello.cc"],
)

multi_arch(
    name = "a.arm",
    image = ":a",
    platforms = [":arm"],
)
multi_arch(
    name = "b.x86",
    image = ":b",
    platforms = [":x86"],
)

platform(
    name = "x86",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ]
)
platform(
    name = "arm",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ]
)

# rules_pkg has forked and extended packaging rules
pkg_tar(
    name = "tar-t",
    srcs = [
        ":a.arm",
        ":b.x86",
    ],
)


