module(
    name = "bazel-example-multiarch-transitions",
    version = "0.1.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.9.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.13")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_shellcheck", version = "0.3.3", repo_name = "com_github_aignas_rules_shellcheck")
bazel_dep(name = "stardoc", version = "0.7.1")

bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)


toolchains = use_extension("//toolchains:extensions.bzl", "toolchains")
use_repo(toolchains, "arm64_gcc_linux_x86_64")

# register toolchains by wildcard :) (thanks, github/cameron-martin)
register_toolchains("//toolchains:all")

