module(
    name = "bazel-example-multiarch-transitions",
    version = "0.1.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)


toolchains = use_extension("//toolchains:extensions.bzl", "toolchains")
use_repo(toolchains, "arm64_gcc_linux_x86_64")

# register toolchains by wildcard :) (thanks, github/cameron-martin)
register_toolchains("//toolchains:all")

